--- a/Ordering System/Template/css/style.css
+++ b/Ordering System/Template/css/style.css
@@ -6,6 +6,53 @@ body {
   overflow-x: hidden;
 }
 
+/*Added form Product Quantity increasing & decreasing*/
+.product__details__option{
+    overflow: hidden;
+}
+.product__details__option .quantity{
+    overflow:hidden;
+    margin-right: 20px;
+}
+
+.product__details__option .pro-qty{
+    height: 50px;
+    width: 140px;
+    border: 1px solid #e1e1e1;
+    padding: 0 20px;
+}
+    
+.product__details__option .pro-qty .probtn{
+    font-size: 16px;
+    float: left;
+    height: 100%;
+    line-height: 48px;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.product__details__option .pro-qty .probtn.dec{
+    color: #888888;
+}
+
+.product__details__option .pro-qty .probtn.inc{
+    color: #111111;
+}
+
+.product__details__option .pro-qty input{
+    border: none;
+    height:100%;
+    width: 72px;
+    font-size:16px;
+    font-weight:600;
+    color:#111111;
+    float: left;
+    text-align: center;
+}
+
+
+/*Added form Product Quantity increasing & decreasing*/
+
 .layout_padding {
   padding: 90px 0;
 }
