--- a/Ordering System/Admin/Admin.Master
+++ b/Ordering System/Admin/Admin.Master
@@ -217,7 +217,7 @@
                                 <div class="pcoded-navigatio-lavel" data-i18n="nav.category.other">User's Feedback Query</div>
                                 <ul class="pcoded-item pcoded-left-item">
                                     <li>
-                                        <a href="#">
+                                        <a href="Contacts.aspx">
                                             <span class="pcoded-micon"><i class="ti-direction-alt"></i><b>M</b></span>
                                             <span class="pcoded-mtext" data-i18n="nav.menu-levels.main">Contact</span>
                                             <span class="pcoded-mcaret"></span>
