purchase history done

--- a/Ordering System/Admin/Admin.Master
+++ b/Ordering System/Admin/Admin.Master
@@ -195,7 +195,7 @@
                                 <div class="pcoded-navigatio-lavel" data-i18n="nav.category.other">Product Delivery Status</div>
                                 <ul class="pcoded-item pcoded-left-item">
                                     <li>
-                                        <a href="#">
+                                        <a href="OrderStatus.aspx">
                                             <span class="pcoded-micon"><i class="ti-direction-alt"></i><b>M</b></span>
                                             <span class="pcoded-mtext" data-i18n="nav.menu-levels.main">Update Status</span>
                                             <span class="pcoded-mcaret"></span>
