--- a/Ordering System/User/User.Master
+++ b/Ordering System/User/User.Master
@@ -187,19 +187,19 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Kamalpokhari, Ktm
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +977 9856637882
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  ISRblaze@gmail.com
                 </span>
               </a>
             </div>
@@ -240,16 +240,16 @@
             Everyday
           </p>
           <p>
-            10.00 Am -10.00 Pm
+            9.00 Am -10.00 Pm
           </p>
         </div>
       </div>
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
-          &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+          <a href="https://html.design/">ISR Blaze</a><br><br>
+          <%--&copy; <span id="displayYear"></span> Distributed By
+          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>--%>
         </p>
       </div>
     </div>
