--- a/Ordering System/Admin/Admin.Master
+++ b/Ordering System/Admin/Admin.Master
@@ -111,6 +111,7 @@
 
                             <a href="index.html">
                                 <img class="img-fluid" src="../assets/images/logo.png" alt="Theme-Logo" />
+                                <h3 class="pl-2">ADMIN</h3>
                             </a>
                             <a class="mobile-options">
                                 <i class="ti-more"></i>
@@ -228,7 +229,7 @@
                                 <div class="pcoded-navigatio-lavel" data-i18n="nav.category.other">Reports</div>
                                 <ul class="pcoded-item pcoded-left-item">
                                     <li>
-                                        <a href="#">
+                                        <a href="Report.aspx">
                                             <span class="pcoded-micon"><i class="ti-direction-alt"></i><b>M</b></span>
                                             <span class="pcoded-mtext" data-i18n="nav.menu-levels.main">Selling Report</span>
                                             <span class="pcoded-mcaret"></span>
